--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     ]
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.0",
     "bootstrap": "^4.5.0",
-    "react": "^16.3.2",
+    "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
     "react-dom": "^16.3.2",
+    "styled-components": "^5.1.1",
     "terser": "3.16.0"
   },
   "resolutions": {
@@ -38,16 +40,16 @@
   },
   "devDependencies": {
     "@types/jest": "^23.3.13",
-    "@types/node": "^10.1.2",
-    "@types/react": "^16.3.14",
-    "@types/react-dom": "^16.0.5",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.38",
+    "@types/react-dom": "^16.9.0",
+    "azdata": "1.0.0",
     "react-scripts": "^2.1.3",
     "rewire": "^4.0.1",
-    "typescript": "^3.3.1",
-    "azdata": "1.0.0",
     "ts-loader": "^7.0.5",
-    "vscode": "1.1.37",
-    "vsce": "^1.77.0"
+    "typescript": "^3.8.3",
+    "vsce": "^1.77.0",
+    "vscode": "1.1.37"
   },
   "browserslist": [
     ">0.2%",
