--- a/package.json
+++ b/package.json
@@ -19,12 +19,11 @@
     ]
   },
   "dependencies": {
-    "@types/styled-components": "^5.1.0",
     "bootstrap": "^4.5.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
     "react-dom": "^16.3.2",
-    "styled-components": "^5.1.1",
+    "react-dual-listbox": "^2.0.0",
     "terser": "3.16.0"
   },
   "resolutions": {
