--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
-  "name": "vscode-webview-react",
+  "name": "eltsnap",
   "version": "0.1.0",
+  "publisher": "kosta234",
   "engines": {
-    "vscode": "^1.38.0"
+    "vscode": "^1.38.0",
+    "azdata": "*"
   },
-  "publisher": "rebornix",
+  "categories": [
+    "Other"
+  ],
   "activationEvents": [
-    "onCommand:react-webview.start"
+    "onCommand:react-webview.start",
+    "onCommand:extension.ELTretrieveDialog",
+    "onCommand:extension.ELTsaveDialog"
   ],
   "main": "./build/ext-src/extension.js",
   "contributes": {
@@ -15,16 +21,29 @@
         "command": "react-webview.start",
         "title": "Start React Webview",
         "category": "React"
+      },
+      {
+        "command": "extension.ELTretrieveDialog",
+        "title": "eltSnap: Retrieve Query Dialog"
+      },
+      {
+        "command": "extension.ELTsaveDialog",
+        "title": "eltSnap: Save Query Dialog"
       }
     ]
   },
   "dependencies": {
+    "azdata": "^1.0.0",
     "bootstrap": "^4.5.0",
+    "browserlist": "^1.0.1",
+    "browserslist": "^4.13.0",
+    "caniuse-lite": "^1.0.30001105",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
     "react-dom": "^16.3.2",
     "react-dual-listbox": "^2.0.0",
-    "terser": "3.16.0"
+    "terser": "3.16.0",
+    "vscode": "1.1.37"
   },
   "resolutions": {
     "terser": "3.14.1"
@@ -38,17 +57,16 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@types/azdata": "^1.15.2",
     "@types/jest": "^23.3.13",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.38",
     "@types/react-dom": "^16.9.0",
-    "azdata": "1.0.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^3.4.1",
     "rewire": "^4.0.1",
     "ts-loader": "^7.0.5",
     "typescript": "^3.8.3",
-    "vsce": "^1.77.0",
-    "vscode": "1.1.37"
+    "vsce": "^1.77.0"
   },
   "browserslist": [
     ">0.2%",
