--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "sourceMap": true,
+
   },
   "include": [
     "src"
